<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="jp.co.yumemi.android.code_check.ui.home.HomeFragment"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_homeFragment2_to_repositoryDetailFragment2"
            app:destination="@id/repositoryDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/repositoryDetailFragment"
        android:name="jp.co.yumemi.android.code_check.ui.repository_detail.RepositoryDetailFragment"
        android:label="@string/title_repository">
        <argument
            android:name="repository_argument"
            app:argType="jp.co.yumemi.android.code_check.data.model.GithubRepositoryData" />
        <action
            android:id="@+id/action_repositoryDetailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_repositoryDetailFragment_to_homeFragment2"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteRepositoryFragment"
        android:name="jp.co.yumemi.android.code_check.ui.favourite_repo.FavouriteRepositoryFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite_repository" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="jp.co.yumemi.android.code_check.ui.search_history.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>
