<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.splash.SplashFragment">

    <!-- Image View for displaying the main picture -->
    <ImageView
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:contentDescription="@string/splash_screen_main_picture"
        android:src="@drawable/git_logo" />

    <!-- Text View for displaying the copyright information -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="@string/yuememi_Inc"
        android:textSize="@dimen/_10sp"
        android:textStyle="bold" />

    <!-- Horizontal Divider -->
    <View
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_1dp"
        android:layout_marginTop="@dimen/_2dp"
        android:background="@color/git_blue"
        android:orientation="vertical" />

    <!-- Text View for displaying the role information -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:letterSpacing=".2"
        android:text="@string/android_engineer_code_check"
        android:textSize="@dimen/_9sp" />

</LinearLayout>