<?xml version="1.0" encoding="utf-8"?>
<!-- Card view layout for displaying repository item -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10dp"
    android:layout_marginVertical="@dimen/_16dp"
    app:cardCornerRadius="@dimen/_20dp"
    app:cardElevation="@dimen/_4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Image and repository name section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <!-- Owner image -->
            <ImageView
                android:id="@+id/iv_owner"
                android:layout_width="@dimen/_95dp"
                android:layout_height="@dimen/_95dp"
                android:contentDescription="@string/owner_image"
                android:scaleType="fitXY" />
            <!-- Repository name -->
            <TextView
                android:id="@+id/repositoryNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_weight="1"
                android:text="@string/repository_name"
                android:textAppearance="?android:textAppearanceMedium" />
            <!-- Favorite icon -->
            <ImageView
                android:id="@+id/heart_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:contentDescription="@string/heart_icon_description"
                app:srcCompat="@drawable/ic_fav_fill"
                app:tint="@color/red" />
        </LinearLayout>
        <!-- Separator line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="#03A9F4" />

    </LinearLayout>

</androidx.cardview.widget.CardView>